# TaskScheduler

./: .gitignore  CMakeLists.txt  README.md
config/: tasks.xml
docs/: ARCHITECTURE.md  CONFIG_DRIVEN.md  TESTING_SUGGESTIONS.md
include/: actuator_task.h  config_manager.h  config_parser.h  file_watcher.h  scheduler.h  sensor_task.h  task_base.h  task_factory.h  types.h
include/config/: config_manager.h  config_parser.h
include/core/: scheduler.h  task_base.h
include/tasks/: actuator_task.h  sensor_task.h  task_factory.h
src/: CMakeLists.txt  actuator_task.cpp  config_manager.cpp  config_parser.cpp  file_watcher.cpp  main.cpp  scheduler.cpp  sensor_task.cpp  task_base.cpp  task_factory.cpp
src/config/: config_manager.cpp  config_parser.cpp  file_watcher.cpp
src/core/: scheduler.cpp  task_base.cpp
src/tasks/: actuator_task.cpp  sensor_task.cpp  task_factory.cpp
tests/: CMakeLists.txt  test_concurrency.cpp  test_config_module.cpp  test_config_updates.cpp  test_edge_cases.cpp  test_error_handling.cpp  test_lazy_deletion.cpp  test_main.cpp  test_scheduler.cpp  test_state_machine.cpp  test_task_lifecycle.cpp
